# cortex-model

./: AgentRunner.py  README-cortex-model.md  cortex_os_mentalmodel_http_server.py  cortex_os_mentalmodel_server.py  cortex_os_mentalmodel_server_mcp.py  deploy-toolbox-gcp.sh  deploy-toolbox-local.sh  expert_tools.py  neo4j-episode-create-mcp-toolbox-config.ipynb  neo4j-episode-gds-retrieval-and-mcp.ipynb  neo4j-episode-llmgraphtransformer.ipynb  neo4j-episode-loader.ipynb  neo4j-episode-programatic-chunking-embedding.ipynb  neo4j-episode-retrieval-and-mcp.ipynb  neo4j-episode-with-gds.ipynb  neo4j_podcast_episode.py  person.py  podcast-episode-tools.yaml  prompts.py  pyproject.toml  requirements.txt  start-http-server.sh
episode_data/: episode_input.json  episode_input_Part1.json
input-podcast-episodes-data/: AnthropicAndModelContextProtocol-MCP-WithDavidSoriaParra-ep1836.txt  DuckLake-SimplifyingLakehouseEcosystem-ep480.txt  Iceberg-At-NetflixAndBeyond-RyanBlue-ep1654.txt  PromptsAsFunctions-BAML-Revolution_AI-Engineering-ep2025040307.txt  delayed-view-semantics-incremental-data-processing-ep473.txt  kuzudb-embeddable-graph-database-ep477.txt
